Fix resume ratio on mobile

--- a/apps/portfolio/front/src/styles.css
+++ b/apps/portfolio/front/src/styles.css
@@ -351,14 +351,6 @@ a.active {
     color: var(--heading);
 }
 
-#resume {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-}
-
 /* Fonts */
 
 @font-face {
